# Civilization_Simulation_system

./: .gitignore  README.md  main.py  pyproject.toml
.omo/notepads/simulation-game/: config.md  entity.md  spatial.md
.omo/run-continuation/: ses_136091b2dffeixF7QxXDVs5qy4.json
.sisyphus/notepads/simulation-game/: output.md  rules.md
doc/: detailed-design-01-overview.md  detailed-design-02-entity-config.md  detailed-design-03-spatial-index.md  detailed-design-04-simulation.md  detailed-design-05-rules.md  detailed-design-06-output-stats.md  detailed-design-07-visualization.md  detailed-design-08-cli-batch.md  gitignore_ref  prompt.md  proposal.md  pyproject_ref.toml  设计文档-完整版.md
doc/tasks/: cli-batch.md  config.md  entity.md  output.md  progress.md  rules.md  simulation.md  spatial.md  visualization.md
src/: batch.py  cli.py  config.py  entity.py  simulation.py  spatial.py
src/rules/: dark_forest.py  detection.py  expansion.py  tech_bomb.py
src/visualization/: __init__.py  interactive.py  plotter.py  run_modes.py
tests/: test_batch.py  test_cli.py  test_config.py  test_entity.py  test_interactive.py  test_output_data_saver.py  test_output_stats.py  test_rules_dark_forest.py  test_rules_detection.py  test_rules_expansion.py  test_rules_tech_bomb.py  test_simulation.py  test_spatial.py  test_visualization.py
